<resources>
    <string name="app_name">나의 로또번호</string>
    <string name="로또번호추첨기">로또번호추첨기</string>
    <string name="당첨번호">1등 당첨번호</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="번호추첨">번호추첨</string>
    <string name="_6_45">로또6/45</string>
    <string name="intro_main">종류를 선택해주세요</string>
    <string name="_720">연금복권720+</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_lotto_main">LottoMainActivity</string>
    <string name="pension_title">연금복권 번호 추첨기</string>
    <string name="pension_subtitle">연금복권720+</string>
</resources>